# Generated by Django 4.2.7 on 2025-04-01 12:43

from django.conf import settings
import django.core.validators
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='SheetMusic',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=100, verbose_name='曲谱名称')),
                ('composer', models.CharField(max_length=100, verbose_name='作曲家')),
                ('difficulty', models.CharField(choices=[('beginner', '初级'), ('intermediate', '中级'), ('advanced', '高级')], max_length=20, verbose_name='难度等级')),
                ('genre', models.CharField(choices=[('classical', '古典'), ('pop', '流行'), ('jazz', '爵士'), ('folk', '民谣')], max_length=20, verbose_name='曲风分类')),
                ('cover_image', models.ImageField(upload_to='sheet_music/covers/', verbose_name='封面图片')),
                ('pdf_file', models.FileField(upload_to='sheet_music/pdfs/', verbose_name='PDF文件')),
                ('description', models.TextField(blank=True, null=True, verbose_name='曲谱描述')),
                ('upload_time', models.DateTimeField(auto_now_add=True, verbose_name='上传时间')),
                ('is_active', models.BooleanField(default=True, verbose_name='是否可用')),
            ],
            options={
                'verbose_name': '曲谱',
                'verbose_name_plural': '曲谱',
                'ordering': ['-upload_time'],
            },
        ),
        migrations.CreateModel(
            name='Student',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, verbose_name='姓名')),
                ('level', models.IntegerField(choices=[(1, '1级'), (2, '2级'), (3, '3级'), (4, '4级'), (5, '5级'), (6, '6级'), (7, '7级'), (8, '8级'), (9, '9级'), (10, '10级')], verbose_name='当前等级')),
                ('target_level', models.IntegerField(choices=[(1, '1级'), (2, '2级'), (3, '3级'), (4, '4级'), (5, '5级'), (6, '6级'), (7, '7级'), (8, '8级'), (9, '9级'), (10, '10级')], verbose_name='目标等级')),
                ('phone', models.CharField(max_length=11, verbose_name='联系电话')),
                ('parent_name', models.CharField(max_length=50, verbose_name='家长姓名')),
                ('parent_phone', models.CharField(max_length=11, verbose_name='家长电话')),
                ('school', models.CharField(max_length=100, verbose_name='就读学校')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='student_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': '学生',
                'verbose_name_plural': '学生',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PracticeRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(verbose_name='练习日期')),
                ('start_time', models.DateTimeField(verbose_name='开始时间')),
                ('end_time', models.DateTimeField(verbose_name='结束时间')),
                ('duration', models.IntegerField(verbose_name='练习时长(分钟)')),
                ('piano_number', models.IntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(7)], verbose_name='钢琴编号')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='practice_records', to='students.student', verbose_name='学生')),
            ],
            options={
                'verbose_name': '练琴记录',
                'verbose_name_plural': '练琴记录',
                'ordering': ['-date', '-start_time'],
            },
        ),
        migrations.CreateModel(
            name='Attendance',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(verbose_name='考勤日期')),
                ('check_in_time', models.DateTimeField(verbose_name='签到时间')),
                ('check_out_time', models.DateTimeField(blank=True, null=True, verbose_name='签退时间')),
                ('status', models.CharField(choices=[('present', '已签到'), ('absent', '未签到'), ('late', '迟到'), ('early_leave', '早退')], default='present', max_length=20, verbose_name='考勤状态')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attendances', to='students.student', verbose_name='学生')),
            ],
            options={
                'verbose_name': '考勤记录',
                'verbose_name_plural': '考勤记录',
                'ordering': ['-date', '-check_in_time'],
            },
        ),
        migrations.CreateModel(
            name='StudentFavorite',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='收藏时间')),
                ('sheet_music', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='favorited_by', to='students.sheetmusic', verbose_name='曲谱')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='favorites', to='students.student', verbose_name='学生')),
            ],
            options={
                'verbose_name': '学生收藏',
                'verbose_name_plural': '学生收藏',
                'ordering': ['-created_at'],
                'unique_together': {('student', 'sheet_music')},
            },
        ),
        migrations.CreateModel(
            name='SheetMusicPage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('page_number', models.IntegerField(verbose_name='页码')),
                ('image', models.ImageField(upload_to='sheet_music/pages/', verbose_name='页面图片')),
                ('sheet_music', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sheet_pages', to='students.sheetmusic', verbose_name='曲谱')),
            ],
            options={
                'verbose_name': '曲谱页面',
                'verbose_name_plural': '曲谱页面',
                'ordering': ['sheet_music', 'page_number'],
                'unique_together': {('sheet_music', 'page_number')},
            },
        ),
    ]
